--- a/style.css
+++ b/style.css
@@ -184,14 +184,8 @@ footer {
         max-width: 250px;
         margin: 0 auto;
     }
-    .about-us {
-        flex-direction: column;
-        align-items: center;
-        text-align: center;
-    }
-    .about-us .about-image img {
-        width: 250px;
-        margin-top: 20px;
+    nav > ul {
+        display: none;
     }
 }
 @media (max-width: 600px) {
@@ -214,6 +208,10 @@ footer {
         width: 100%;
         max-width: 300px;
     }
+    nav > ul {
+        display: none;
+    }
+    
 }
 
 
